<?xml version="1.0"?>
<package>
  <name>hololens_robot_navigation</name>
  <version>0.0.0</version>
  <description>The hololens_robot_navigation package</description>


  <maintainer email="ishikawa@cvl.iis.u-tokyo.ac.jp">Ryoichi Ishikawa</maintainer>

  <license>MIT</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>


  <export>

  </export>
</package>
